--- a/RazorLib/Shared/hardwares/HardwareNavButtonComponent.razor
+++ b/RazorLib/Shared/hardwares/HardwareNavButtonComponent.razor
@@ -3,85 +3,37 @@
 @using SharedLib.IServices;
 @using SharedLib;
 
-@inherits BlazorBusyComponentBaseModel
-
-@inject IHardwaresService _hardwares
+@inherits ReloadPageComponentBaseModel
+@inject ClientConfigModel _conf
 
 @if (IsBusyProgress)
 {
-    <span>Получение данных ...</span>
+    <div class="d-flex justify-content-center">
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
 }
 else if (IsExpand)
 {
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <p class="mb-0">@($"{Text} >> {NavHref}")</p>
-        <PillsSetComponent>
-            <PillComponent Tooltip="Рендеринг" Title="Рендеринг">
-                <CascadingValue Value="@ReloadPage">
-                    <HtmlRootTranslatorComponent @ref="ref1" Html="@html" />
-                </CascadingValue>
-            </PillComponent>
-            <PillComponent Tooltip="Парсинг исходного HTML в DOM" Title="Дерево">
-                <HtmlTreeComponent Html="@html" />
-            </PillComponent>
-            <PillComponent Tooltip="Исходный HTML" Title="Исходники">
-                <HtmlShowComponent Html="@html" />
-            </PillComponent>
-        </PillsSetComponent>
+        <HardwareNavTitleComponent PagePath="@PagePath" TitleText="@Text" />
+        <HardwaresNavPillsComponent @ref="refHtmlRoot" HtmlSource="@HtmlSource" ReloadPage="@ReloadPage" />
         <button @onclick="Expand" type="button" class="btn-close" aria-label="Close"></button>
     </div>
 }
 else
 {
-    <button title="@NavHref" @onclick="Expand" type="button" class="btn btn-primary">@Text</button>
+    <button title="@PagePath" @onclick="Expand" type="button" class="btn btn-primary">@Text</button>
 }
 
 <ShowMessagesComponent @ref="showMessages" />
 
 @code {
     [Parameter, EditorRequired]
-    public string NavHref { get; set; } = default!;
-
-    [Parameter, EditorRequired]
     public string Text { get; set; } = default!;
 
-    [CascadingParameter, EditorRequired]
-    public int Id { get; set; }
-
-    [CascadingParameter]
-    public FormContextModel? FormContext { get; set; }
-
     bool IsExpand = false;
-    ShowMessagesComponent? showMessages;
-    string? html;
-    HtmlRootTranslatorComponent? ref1;
-
-    void ReloadPage()
-    {
-        if (!IsExpand)
-            return;
-
-        InvokeAsync(async () => await GetData());
-    }
-
-    async Task GetData()
-    {
-        if (Id <= 0)
-            return;
-
-        IsBusyProgress = true;
-        HttpResponseModel rest = await _hardwares.GetHardwareHtmlPage(new HardvareGetRequestModel() { HardwareId = Id, Path = NavHref });
-
-        if (!rest.IsSuccess)
-        {
-            showMessages?.ShowMessages(rest.Messages);
-            return;
-        }
-
-        html = rest.TextPayload;
-        IsBusyProgress = false;
-        ref1?.StateHasChangedCall(html);
-    }
 
     async Task Expand()
     {
