--- a/RazorLib/Shared/html/HtmlNodeTranslatorComponent.razor
+++ b/RazorLib/Shared/html/HtmlNodeTranslatorComponent.razor
@@ -28,12 +28,12 @@
                     }
                     else
                     {
-                        <HardwareNavButtonComponent NavHref="@(_uri.OriginalString)" Text="@NodeData.Text" />
+                        <HardwareNavButtonComponent PagePath="@(_uri.OriginalString)" Text="@NodeData.Text" />
                     }
                 }
                 else
                 {
-                    <HardwareNavButtonComponent NavHref="@(_uri.OriginalString)" Text="@NodeData.Text" />
+                    <HardwareNavButtonComponent PagePath="@(_uri.OriginalString)" Text="@NodeData.Text" />
                 }
 
             }
