--- a/AbLogServer.Client/Pages/HardwareConfigPage.razor
+++ b/AbLogServer.Client/Pages/HardwareConfigPage.razor
@@ -20,7 +20,7 @@
 <CascadingValue Value="@Id">
     <TabSetComponent>
         <TabComponent Tooltip="Управляющий блок" Title="Управляющий блок">
-            <HardwareConfigComponent />
+            <HardwareFormComponent />
         </TabComponent>
         <TabComponent Tooltip="Ретранслятор" Title="Ретранслятор">
             <HardwareTranslateMainLayerComponent />
