--- a/AbLogServer.Client/Shared/NavMenu.razor
+++ b/AbLogServer.Client/Shared/NavMenu.razor
@@ -37,6 +37,11 @@
                 <span class="oi oi-pulse" aria-hidden="true"></span> @(IsShort ? "" : "Тригеры")
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/cameras-page">
+                <span class="oi oi-camera-slr" aria-hidden="true"></span> @(IsShort ? "" : "Камеры")
+            </NavLink>
+        </div>
     </nav>
 </div>
 
