--- a/AbLogServer.Client/Shared/NavMenu.razor
+++ b/AbLogServer.Client/Shared/NavMenu.razor
@@ -17,9 +17,9 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav id="main-left-menu" class="flex-column">
-        <div class="nav-item px-3" title="Home page">
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> @(IsShort ? "" : "Home")
+                <span class="oi oi-wrench" aria-hidden="true"></span> @(IsShort ? "" : "Настройки")
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -92,8 +92,11 @@
         {
             IsShort = false;
             _js_runtime.InvokeVoidAsync("tooltipeHide");
-            StateHasChanged();
-            ModeChangeHandle();
+            InvokeAsync(() =>
+                {
+                    StateHasChanged();
+                    ModeChangeHandle();
+                });
         }
     }
 
@@ -119,8 +122,11 @@
             {
                 timer?.Dispose();
                 IsShort = true;
-                StateHasChanged();
-                ModeChangeHandle();
+                InvokeAsync(() =>
+                {
+                    StateHasChanged();
+                    ModeChangeHandle();
+                });
             }
         }
     }
