--- a/RazorLib/Shared/settings/EmailConfigComponent.razor
+++ b/RazorLib/Shared/settings/EmailConfigComponent.razor
@@ -1,4 +1,8 @@
-﻿<div class="card">
+﻿@using SharedLib;
+
+@inject IParametersStorageService _storage
+
+<div class="card">
     <div class="card-body">
         <h5 class="card-title">Исходящая почта для отправки системных уведомлений клиенту</h5>
         <hr />
