--- a/RazorLib/Shared/settings/MqttConfigComponent.razor
+++ b/RazorLib/Shared/settings/MqttConfigComponent.razor
@@ -1,38 +1,111 @@
-﻿<div class="card">
+﻿@using SharedLib;
+
+@inherits BlazorBusyComponentBaseModel
+
+@inject IParametersStorageService _storage
+
+<div class="card">
     <div class="card-body">
         <h5 class="card-title">Удалённый доступ клиента к системе</h5>
         <hr />
-        <form>
-            <div class="mb-3">
-                <label for="exampleInputServer" class="form-label">Сервер</label>
-                <input type="text" class="form-control" id="exampleInputServer" aria-describedby="serverHelp">
-                <div id="serverHelp" class="form-text">Адрес сервера MQTT</div>
+        <EditForm Model="conf" OnInvalidSubmit="SaveConfMqtt">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
+
+            <div class="row g-3 mb-3">
+                <div class="col-md-10">
+                    <label for="exampleInputServer" class="form-label">Сервер</label>
+                    <input @bind-value="conf.Server" @bind-value:event="oninput" type="text" class="form-control" id="exampleInputServer" aria-describedby="serverHelp">
+                    <div id="serverHelp" class="form-text">Адрес сервера MQTT</div>
+                </div>
+                <div class="col-sm">
+                    <label for="exampleInputPort" class="form-label">Порт</label>
+                    <input @bind-value="conf.Port" @bind-value:event="oninput" type="number" class="form-control" id="exampleInputPort" aria-describedby="portHelp">
+                    <div id="portHelp" class="form-text">Порт сервера MQTT</div>
+                </div>
+                <div class="col-sm">
+                    <label for="exampleInputMaxSize" class="form-label">Max bytes</label>
+                    <input @bind-value="conf.MessageMaxSizeBytes" @bind-value:event="oninput" type="number" class="form-control" id="exampleInputMaxSize" aria-describedby="maxSizeHelp">
+                    <div id="maxSizeHelp" class="form-text">Размер пакета</div>
+                </div>
             </div>
-            <div class="mb-3">
-                <label for="exampleInputLogin" class="form-label">Логин</label>
-                <input type="text" class="form-control" id="exampleInputLogin" aria-describedby="loginHelp">
-                <div id="loginHelp" class="form-text">Имя пользователя для авторизации на сервере MQTT.</div>
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword" class="form-label">Пароль</label>
-                <input type="password" class="form-control" id="exampleInputPassword">
+            <div class="row g-3 mb-3">
+                <div class="col">
+                    <label for="exampleInputLogin" class="form-label">Логин</label>
+                    <input @bind-value="conf.Username" @bind-value:event="oninput" type="text" class="form-control" id="exampleInputLogin" aria-describedby="loginHelp">
+                    <div id="loginHelp" class="form-text">Имя пользователя для авторизации на сервере MQTT.</div>
+                </div>
+                <div class="col">
+                    <label for="exampleInputPassword" class="form-label">Пароль</label>
+                    <input @bind-value="conf.Password" @bind-value:event="oninput" type="password" class="form-control" id="exampleInputPassword" aria-describedby="passwordHelp">
+                    <div id="passwordHelp" class="form-text">Пароль доступа для авторизации на сервере MQTT.</div>
+                </div>
+                <div class="col">
+                    <label for="exampleInputClientId" class="form-label">Идентификатор клиента</label>
+                    <input @bind-value="conf.ClientId" @bind-value:event="oninput" type="tel" class="form-control" id="exampleInputClientId" aria-describedby="clientIdHelp">
+                    <div id="clientIdHelp" class="form-text">Имя клиента (не логин).</div>
+                </div>
             </div>
             <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="exampleCheckAutostart">
+                <input checked="@conf.AutoStart" @bind-value="conf.AutoStart" @bind-value:event="oninput" class="form-check-input" type="checkbox" role="switch" id="exampleCheckAutostart">
                 <label class="form-check-label" for="exampleCheckAutostart">Постоянное подключение (автоподключение при старте)</label>
             </div>
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+
                 <div class="btn-group me-md-2" role="group" aria-label="Basic outlined example">
-                    <button type="button" class="btn btn-outline-primary">Сохранить</button>
-                    <button type="button" class="btn btn-outline-primary">Отмена</button>
+                    <button disabled="@(!IsEdit)" @onclick="SaveConfMqtt" type="submit" class="btn btn-@(IsEdit ? "primary" : "outline-secondary")">Сохранить</button>
+                    @if (IsEdit)
+                    {
+                        <button @onclick="() => conf = GlobalStatic.CreateDeepCopy(conf_self)" type="button" class="btn btn-outline-light">Отмена</button>
+                    }
                 </div>
-                @*<button class="btn btn-primary me-md-2" type="button">Button</button>*@
-                <button class="btn btn-primary" type="button">Старт</button>
+                <button @onclick="TestConnect" class="btn btn-primary" type="button">Тест</button>
             </div>
-        </form>
+        </EditForm>
     </div>
 </div>
-
+<ShowMessagesComponent @ref="showMessages" />
 @code {
+    MqttConfigModel conf = new();
+    MqttConfigModel conf_self = new();
 
+    bool IsEdit => conf != conf_self;
+
+    ShowMessagesComponent? showMessages;
+
+    protected override async Task OnInitializedAsync()
+    {
+        IsBusyProgress = true;
+        MqttConfigResponseModel res = await _storage.GetMqttConfig();
+        if (!res.IsSuccess || res.Conf is null)
+        {
+            showMessages?.ShowMessages(res.Messages);
+            IsBusyProgress = false;
+            return;
+        }
+        conf = res.Conf;
+        conf_self = GlobalStatic.CreateDeepCopy(conf);
+        IsBusyProgress = false;
+    }
+
+    async Task SaveConfMqtt()
+    {
+        IsBusyProgress = true;
+        ResponseBaseModel res = await _storage.SaveMqttConfig(conf);
+
+        showMessages?.ShowMessages(res.Messages);
+
+        if (res.IsSuccess)
+            conf_self = GlobalStatic.CreateDeepCopy(conf);
+
+        IsBusyProgress = false;
+    }
+
+    async Task TestConnect()
+    {
+        IsBusyProgress = true;
+        ResponseBaseModel res = await _storage.TestMqttConnect(conf);
+        showMessages?.ShowMessages(res.Messages);
+        IsBusyProgress = false;
+    }
 }
