--- a/RemoteClient/Pages/IndexPage.razor
+++ b/RemoteClient/Pages/IndexPage.razor
@@ -1,9 +1,22 @@
 ﻿@page "/"
-
-<PageTitle>Index</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+@using RazorLib.Shared.settings
 
 
+<PageTitle>Настройки</PageTitle>
+
+<h1>Настройка приложения</h1>
+
+<MudTabs Elevation="2" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">
+    <MudTabPanel Text="MQTT">
+        <MqttConfigComponent />
+    </MudTabPanel>
+    <MudTabPanel Text="Email">
+        <EmailConfigComponent />
+    </MudTabPanel>
+    <MudTabPanel Text="Telegram bot">
+        <TelegramBotConfigComponent />
+    </MudTabPanel>
+    <MudTabPanel Text="About">
+        <span>Разное ...</span>
+    </MudTabPanel>
+</MudTabs>
